correcting alignment on traffic  section

--- a/css/styles.css
+++ b/css/styles.css
@@ -1176,6 +1176,8 @@ main .module.traffic .traffic-header {
 main .module.traffic .traffic-header .traffic-type {
   list-style-type: none;
   margin-top: 0;
+  text-align: right;
+  background-position: 100%;
 }
 main .module.traffic .traffic-header .traffic-type .traffic-filter {
   display: inline;
