--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -107,6 +107,9 @@ main {
 				.traffic-type {
 					list-style-type: none;
 					margin-top: 0;
+					text-align: right;
+					background-position: 100%;
+
 					.traffic-filter {
 						display: inline;
 						padding: 7px 15px;
